feat: Corrección de layout.tsx y otros archivos para resolver errores de compilación

--- a/package.json
+++ b/package.json
@@ -1,33 +1,26 @@
-﻿{
+{
   "name": "inforia-mvp",
   "version": "1.0.0",
-  "description": "INFORIA - Asistente Clínico y de Negocio para Psicólogos",
+  "description": "INFORIA - Asistente Clínico y de Negocio para Psicólogos. Recupera tu vocación. Nosotros nos encargamos del papeleo.",
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "14.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
     "typescript": "5.3.3",
     "@types/react": "18.2.45",
     "@types/node": "20.11.5",
-    "@types/react-dom": "18.2.18",
-    "lucide-react": "^0.344.0",
-    "next-auth": "^4.24.7",
-    "@supabase/supabase-js": "^2.39.0",
-    "openai": "^4.28.0"
+    "@types/react-dom": "18.2.18"
   },
-  "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.2.3",
-    "vitest": "^1.2.2"
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
